@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-26T01:14:03Z",
-  "count_outdated" : 1170,
-  "uniques_outdated" : 699,
-  "count" : 1177,
-  "uniques" : 706,
+  "timestamp" : "2024-09-28T01:13:57Z",
+  "count_outdated" : 1171,
+  "uniques_outdated" : 700,
+  "count" : 1178,
+  "uniques" : 707,
   "clones" : [
-    {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-15T00:00:00Z",
       "count": 1,
@@ -52,6 +43,15 @@
     },
     {
       "timestamp": "2024-09-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
