@@ -1,3 +1,12 @@
+2024-09-28T01:13:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11079815545 # 432
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-28
+* notice: last 14d: unq all: 6 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 699 1170 / 706 1177
+* notice: next accum: outdated-unq outdated-all / unq all: 700 1171 / 707 1178
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-09-14] / [2024-09-27]
+
 2024-09-26T01:14:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11043725765 # 430
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-26
